# p2term

./: .gitignore  .gitleaksignore  Cargo.toml  Readme.md  deny.toml
.cargo/: config.toml
.github/workflows/: main.yml
.local/: deploy.sh  package.sh
p2term/: Cargo.toml
p2term-lib/: Cargo.toml
p2term-lib/src/: client.rs  client_handle.rs  connection.rs  convert.rs  crypto.rs  error.rs  lib.rs  proto.rs  server.rs  server_handle.rs  streams.rs
p2term-lib/src/client/: runtime.rs  server_handle.rs  shell_proxy.rs
p2term-lib/src/server/: client_handle.rs  config.rs  connection.rs  connection_handler.rs  router.rs  runtime.rs  shell_proxy.rs
p2term-lib/tests/: protocol.rs
p2term-web/: Cargo.toml  index.html  package-lock.json
p2term-web/src/: connection.rs  lib.rs
p2term/src/: main.rs  proto.rs  pty.rs  shell.rs
p2termd/: Cargo.toml
p2termd/src/: config.rs  main.rs  observability.rs  proto.rs  shell.rs  termd.rs
p2termd/src/proto/: proxy.rs
p2termd/src/shell/: handler.rs  pty.rs
