[workspace]
members = ["p2termd","p2term-lib", "p2term"]
resolver = "3"

[workspace.dependencies]

p2term-lib = { path = "./p2term-lib"}

anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "env"] }
hex = "0.4.3"
iroh = "0.95.1"
iroh-base = "0.95.1"
portable-pty = "0.9.0"
rand_core = { version = "0.9.3", features = ["os_rng"] }
rand_chacha = "0.9.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
termion = "4.0.5"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
toml = { version = "0.9.8", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[workspace.lints.clippy]
pedantic = {priority = -1, level = "warn"}
module_name_repetitions = "allow"
missing_errors_doc = "allow"
similar_names = "allow"