[package]
name = "p2term-lib"
version = "0.1.0"
edition = "2024"

[features]
default = []
server = []
client = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
