[package]
name = "p2term-lib"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = []
server = []
client = []

[dependencies]
anyhow = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
rand_core = { workspace = true }
rand_chacha = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
