[package]
name = "p2term-web"
version = "0.1.0"
edition = "2024"

[dependencies]
p2term-lib = { workspace = true, features = ["client"] }
anyhow = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
