[package]
name = "p2term-web"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2term-lib = { workspace = true, features = ["client"] }
anyhow = { workspace = true }
iroh = { workspace = true }
tokio = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
