[package]
name = "p2term"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
p2term-lib = { workspace = true, features = ["client"] }

anyhow = { workspace = true }
clap = { workspace = true }
iroh = { workspace = true }
termion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
