[package]
name = "p2term"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "A cli utility to open up a shell to `p2termd` servers"

[dependencies]
p2term-lib = { workspace = true, features = ["client"] }

anyhow = { workspace = true }
clap = { workspace = true }
iroh = { workspace = true }
termion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Marcus Grass <marcus.grass@protonmail.com>"
copyright = "2025, Marcus Grass"
section = "utility"
priority = "optional"
assets = [
    ["target/release/p2term", "usr/bin/", "755"],
    ["../Readme.md", "usr/share/doc/p2term/README", "644"],
]
