[package]
name = "p2termd"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }


[dependencies]
p2term-lib = { workspace = true, features = ["server"] }

anyhow = { workspace = true }
clap = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true