[package]
name = "p2termd"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
description = "A daemon that allows `p2term`-clients to connect to a shell using this server's public key as address"


[dependencies]
p2term-lib = { workspace = true, features = ["server"] }

anyhow = { workspace = true }
clap = { workspace = true }
portable-pty = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[package.metadata.deb]
maintainer = "Marcus Grass <marcus.grass@protonmail.com>"
copyright = "2025, Marcus Grass"
section = "utility"
priority = "optional"
assets = [
    ["target/release/p2termd", "usr/bin/", "755"],
    ["../Readme.md", "usr/share/doc/p2termd/README", "644"],
]
